## WIP

### New Feature

* When doing a map search the searched location will be applied to all
  selected images.  In previous versions a search would only position the
  map.

### Bug Fix

* Replace a call to fatalerror with an Alert notifying the user that a file
  could not be processed.

### Known Bugs

* [Developer bug] Trying to run any test cases will crash Xcode.  This may be
a side effect of running the Catalina Beta.

## GeoTag 4.6.2

* 4.6.2 is the same as 4.6.1, but with a notarized dmg file for hassle free
  installation on macOS Catalina.

## GeoTag 4.6.1

### Bug Fix

* Some GPX files may not contain any tracks.  Tell the user if no tracks were
  found and otherwise ignore the file.

* The GPS Date/Time value was not being updated in sidecar files.

## GeoTag 4.6

### New Features

* If a sidecar file exists metadata can be read from and updated metadata
  written to the sidecar file instead of the image file. This is controlled
  by a new preference item.  Files in the same folder as the image file with
  the same name but with an extension of ".xmp" are assumed to be sidecar files.
  
* The presence of a sidecar file is indicated by a '*' following the image name.

* heic (iPhone) image file updates are now supported.

* Add a preference item that controls coordinate display formats.   Latitude
  and longitude can be displayed in one of three forms:
  - dd.ddddd
  - dd° mm.mmmm' N (or S, E, W depending upon coordinate)
  - dd° mm' ss.ss" N (or S, E, W depending upon coordinate)

* Location coordinates can be entered by double clicking on either the
  latitude or longitude of an entry.  Coordinates can be entered in
  degrees, degrees and minutes, or degrees, minutes, and seconds.
  Use of °, ', and " indicators are optional.

* Reading image metadata has been moved from the main queue. As a result opening
  a large number of images should be slightly faster.

* Preferences window changed.  Textual explanations of buttons have been