@@ -1,4 +1,4 @@
-## GeoTag for macOS -- macOS 10.12 or later
+## GeoTag for macOS -- macOS 10.13 or later
 
 GeoTag is a free OS X single window application that allows you to update image
 metadata with geolocation tags by selecting one or more images then panning and
@@ -29,6 +29,11 @@ map.
 
 * Replace a call to fatalerror with an Alert notifying the user that a file
 could not be processed.
+
+* Handle GPX track logs with local (non-ISO9601) timestamps.  The timestamp
+  format is assumed to be "yyyy-MM-dd'T'HH:mm:ss".
+
+* Fix possible off-by-one when searching for a track point by timestamp
 
 ### Known Bugs
 
