@@ -11,6 +11,11 @@
 * Replace a call to fatalerror with an Alert notifying the user that a file
   could not be processed.
 
+* Handle GPX track logs with local (non-ISO9601) timestamps.  The timestamp
+  format is assumed to be "yyyy-MM-dd'T'HH:mm:ss".
+
+* Fix possible off-by-one when searching for a track point by timestamp
+
 ### Known Bugs
 
 * [Developer bug] Trying to run any test cases will crash Xcode.  This may be
